--- a/match-reports.html
+++ b/match-reports.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <div class="header-container">
-    <!--The home pages title-->
+    <!--The pages title-->
     <h1><a href="index.html">FUT FRENZY</a></h1>
     <hr>
     <div class="button-container">
@@ -20,6 +20,8 @@
         <hr>
     </div>
 </div>
+<!--Title of league boxes and the scores. Tried
+a new thing where text comes up when you hover over-->
 <h2>RECENT TOP 5 LEAGUE SCORES</h2>
 <div class="league-container">
    <div class="league-box">
@@ -73,6 +75,7 @@
     </div>
   </div>
 </div>
+<!--Title for player boxes. Also did the hover thing-->
     <h2>TOP 5 BALLON D'OR RANKINGS</h2>
       <div class="league-container">
         <h3>1.</h3>
