--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header-container">
-        <!--The home pages title-->
+        <!--The pages title-->
         <h1><a href="index.html">FUT FRENZY</a></h1>
         <hr>
         <div class="button-container">
@@ -21,6 +21,7 @@
             <hr>
         </div>
     </div>
+    <!--The title of the page. A banner with logos-->
     <main class="main-container">
         <div class="badge-container">
             <div class="whole-container">
@@ -33,6 +34,7 @@
                 <img src="inter-club-final.png" alt="pic of inter badge">
             </div>
         </div>
+        <!--Article about the current stage of the Champions league-->
          <div class="article-container">
         The Champions League semi-finals are here, with Arsenal facing PSG and Barcelona taking on Inter Milan in two high-stakes clashes.
         Arsenal powered past Real Madrid 5-1 on aggregate. 
@@ -43,6 +45,7 @@
         Coach Hansi Flick confirmed Szczęsny will remain in goal despite ter Stegen's return.
         Inter Milan knocked out Bayern Munich 4-3, led by Lautaro Martínez, who's scored 8 goals this tournament.
         First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
+        <!--A GIF of Thierry Henry-->
         <img src="thierry-henry.gif" alt="photo of a bald man smiling">
     </div>
     </main>
