--- a/about-contact.html
+++ b/about-contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <div class="header-container">
-        <!--The home pages title-->
+        <!--The pages title-->
         <h1><a href="index.html">FUT FRENZY</a></h1>
         <hr>
         <div class="button-container">
@@ -19,6 +19,7 @@
             <hr>
         </div>
     </div>
+    <!--Contact information box-->
     <div class="contact-container">
         <h2>Contact Information</h2>
         <div class="info">
