--- a/opinion-analysis.html
+++ b/opinion-analysis.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <div class="header-container">
-        <!--The home pages title-->
+        <!--The pages title-->
         <h1><a href="index.html">FUT FRENZY</a></h1>
         <hr>
         <div class="button-container">
@@ -19,6 +19,7 @@
             <hr>
         </div>
     </div>
+    <!--All thev videos on the page-->
     <div class="content-container">
     <iframe src="https://www.youtube.com/embed/JlUI9eDkkhY?si=xKriklWBowgp7VKq" 
     title="YouTube video player" frameborder="0" allow="accelerometer; 
