--- a/news.html
+++ b/news.html
@@ -8,22 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header-container">
+    <header class="header-container">
         <!--The pages title-->
         <h1><a href="index.html">FUT FRENZY</a></h1>
         <hr>
-        <div class="button-container">
+        <nav class="button-container">
             <!--The buttons linked to other pages-->
             <h2><a href="news.html">NEWS</a></h2>
             <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
             <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
             <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
             <hr>
-        </div>
-    </div>
+        </nav>
+    </header>
+
     <!--The title of the page. A banner with logos-->
     <main class="main-container">
-        <div class="badge-container">
+        <section class="badge-container">
             <div class="whole-container">
                 <img src="arsenal-club-final.png" alt="pic of arsenal badge">
                 <h3>VS</h3>
@@ -33,12 +34,13 @@
                 <h3>VS</h3>
                 <img src="inter-club-final.png" alt="pic of inter badge">
             </div>
-        </div>
+        </section>
+
         <!--Article about the current stage of the Champions league-->
-         <div class="article-container">
+        <article class="article-container">
         The Champions League semi-finals are here, with Arsenal facing PSG and Barcelona taking on Inter Milan in two high-stakes clashes.
         Arsenal powered past Real Madrid 5-1 on aggregate. 
-       “This is the biggest game the Emirates has seen,” said Mikel Arteta. 
+        “This is the biggest game the Emirates has seen,” said Mikel Arteta. 
         Analyst Troy Deeney added, “Arsenal will have too much for PSG.”
         PSG edged out Aston Villa 5-4, with Ousmane Dembélé leading the scoring. 
         On the other side, Barcelona advanced after beating Dortmund 5-3 overall. 
@@ -47,9 +49,9 @@
         First legs are set for April 29-30; second legs on May 6-7. The final will be held in Munich on May 31.
         <!--A GIF of Thierry Henry-->
         <img src="thierry-henry.gif" alt="photo of a bald man smiling">
-    </div>
+        </article>
     </main>
-</div>
+
     <footer class="footer-container">
         <!--Footer-->
         <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
