--- a/opinion-analysis.html
+++ b/opinion-analysis.html
@@ -19,7 +19,7 @@
             <hr>
         </div>
     </div>
-    <!--All thev videos on the page-->
+    <!--All the videos on the page-->
     <div class="content-container">
     <iframe src="https://www.youtube.com/embed/JlUI9eDkkhY?si=xKriklWBowgp7VKq" 
     title="YouTube video player" frameborder="0" allow="accelerometer; 
