--- a/index.html
+++ b/index.html
@@ -8,76 +8,87 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header-container">
+    <header class="header-container">
         <!--The home pages title-->
-    <h1>FUT FRENZY</h1>
-    <hr>
-<div class="button-container">
-    <!--The buttons linked to ther pages-->
-    <h2><a href="news.html">NEWS</a></h2>
-    <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
-    <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
-    <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
-    <hr>
-</div>
-</div>
-<div class="main-container">
-    <div class="start-page">
-    <div class="intro-section">
-        <!--Welcome text of the home page-->
-    <h3> Welcome to my page where i make sure that you get the latest news 
-        and updates about everything in the football world! Surely by now
-        you are already pretty much a football expert, but there is 
-        always much more to be learned. Below you can view some of news articles and lists like 
-        "Top 5 most inform players". And on top there are a 
-        few links for a little adventure in my blog. Thank you very much for visiting
-        my website and i hope you all enjoy my little blog!
-    </h3>
-    <img src="football-488714_640.jpg" alt="pic of a football">
-    </div>
-    <div class="page-container">
-    <div class="inform-player-list">
-        <!--List of best players right now-->
-     <h4>Top 10 most inform players right now in no order</h4>
-     <ol>
-        <li>Raphina</li>
-        <li>Pedri</li>
-        <li>Salah</li>
-        <li>Mbappe</li>
-        <li>Isak</li>
-        <li>Yamal</li>
-        <li>Musiala</li>
-        <li>Doue</li>
-        <li>Kvaratshkelia</li>
-        <li>Lewandowski</li>
-        </ol>
+        <div class="title-box">
+            <h1>FUT FRENZY</h1>
         </div>
-        <div class="article-container">
-            <!--News article about the champions league quarter finals-->
+        <hr>
+        <nav class="button-container">
+            <!--The buttons linked to ther pages-->
+            <div class="nav-buttons">
+                <h2><a href="news.html">NEWS</a></h2>
+                <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
+                <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
+                <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
+            </div>
+            <hr>
+        </nav>
+    </header>
+
+    <main class="main-container">
+        <div class="start-page">
+            <section class="intro-section">
+                <!--Welcome text of the home page-->
+                <div class="intro-text">
+        <h3> Welcome to my page where i make sure that you get the latest news 
+             and updates about everything in the football world! Surely by now
+            you are already pretty much a football expert, but there is 
+             always much more to be learned. Below you can view some of news articles and lists like 
+            "Top 5 most inform players". And on top there are a 
+            few links for a little adventure in my blog. Thank you very much for visiting
+            my website and i hope you all enjoy my little blog!
+        </h3>
+        </div>
+        <div class="intro-image">
+            <img src="football-488714_640.jpg" alt="pic of a football">
+            </div>
+            </section>
+
+            <div class="page-container">
+                <section class="inform-player-list">
+                    <!--List of best players right now-->
+                    <h4>Top 10 most inform players right now in no order</h4>
+                    <ol>
+                        <li>Raphina</li>
+                        <li>Pedri</li>
+                        <li>Salah</li>
+                        <li>Mbappe</li>
+                        <li>Isak</li>
+                        <li>Yamal</li>
+                        <li>Musiala</li>
+                        <li>Doue</li>
+                        <li>Kvaratshkelia</li>
+                        <li>Lewandowski</li>
+                    </ol>
+                </section>
+
+    <article class="article-container">
+        <!--News article about the champions league quarter finals-->
         <h2>The Champions League Quarter-finals Arsenal VS Real Madrid</h2>
         <p>It's starting to get heated over in the biggest stage of them all.
             Only 8 teams left fighting to get the biggest trophy in club football.
             Barcelona, Real Madrid, Arsenal, Inter, Bayern Munchen, Dortmund, 
             Aston Villa and PSG are the 8 big names left and it has been
-            a very different competition than the previous years. With 
+             a very different competition than the previous years. With 
             the big change of the whole champions league format, there have
             been CRAZY games. Arsenal with a DEVESTATING home win against the 
             holding champions. A crushing 3-0 win with 2 absolute screamers
             from none other than Declan Rice. Not the first, but also his second ever 
             direct freekick of his football career. We are patiently waiting
             to see what is going to happen in Santiago Bernabeu!
-        </p>
-    </div>
-    </div>
-    </div>
-    </div>
+            </p>
+    </article>
 </div>
-    
-<footer class="footer-container">
-    <!--Footer for the welcome page-->
-    <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
-    <p>Contact me: engjikrass@hotmail.com</p>
-</footer>
+</div>
+</main>
 
+    <footer class="footer-container">
+        <!--Footer for the welcome page-->
+        <div class="footer-content">
+            <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
+            <p>Contact me: engjikrass@hotmail.com</p>
+        </div>
+    </footer>
 </body>
 </html>
