--- a/index.html
+++ b/index.html
@@ -10,42 +10,33 @@
 <body>
     <header class="header-container">
         <!--The home pages title-->
-        <div class="title-box">
-            <h1>FUT FRENZY</h1>
-        </div>
+        <h1>FUT FRENZY</h1>
         <hr>
         <nav class="button-container">
             <!--The buttons linked to ther pages-->
-            <div class="nav-buttons">
-                <h2><a href="news.html">NEWS</a></h2>
-                <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
-                <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
-                <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
-            </div>
+            <h2><a href="news.html">NEWS</a></h2>
+            <h2><a href="match-reports.html">MATCH REPORTS</a></h2>
+            <h2><a href="opinion-analysis.html">OPINION & ANALYSIS</a></h2>
+            <h2><a href="about-contact.html">ABOUT AND CONTACT PAGE</a></h2>
             <hr>
         </nav>
     </header>
 
-    <main class="main-container">
-        <div class="start-page">
-            <section class="intro-section">
-                <!--Welcome text of the home page-->
-                <div class="intro-text">
+<main class="main-container">
+    <section class="start-page">
+        <section class="intro-section">
+        <!--Welcome text of the home page-->
         <h3> Welcome to my page where i make sure that you get the latest news 
              and updates about everything in the football world! Surely by now
             you are already pretty much a football expert, but there is 
-             always much more to be learned. Below you can view some of news articles and lists like 
+            always much more to be learned. Below you can view some of news articles and lists like 
             "Top 5 most inform players". And on top there are a 
             few links for a little adventure in my blog. Thank you very much for visiting
             my website and i hope you all enjoy my little blog!
         </h3>
-        </div>
-        <div class="intro-image">
-            <img src="football-488714_640.jpg" alt="pic of a football">
-            </div>
-            </section>
-
-            <div class="page-container">
+        <img src="football-488714_640.jpg" alt="pic of a football">
+    </section>
+            <section class="page-container">
                 <section class="inform-player-list">
                     <!--List of best players right now-->
                     <h4>Top 10 most inform players right now in no order</h4>
@@ -61,34 +52,31 @@
                         <li>Kvaratshkelia</li>
                         <li>Lewandowski</li>
                     </ol>
-                </section>
-
+    </section>
     <article class="article-container">
-        <!--News article about the champions league quarter finals-->
+      <!--News article about the champions league quarter finals-->
         <h2>The Champions League Quarter-finals Arsenal VS Real Madrid</h2>
         <p>It's starting to get heated over in the biggest stage of them all.
             Only 8 teams left fighting to get the biggest trophy in club football.
             Barcelona, Real Madrid, Arsenal, Inter, Bayern Munchen, Dortmund, 
             Aston Villa and PSG are the 8 big names left and it has been
-             a very different competition than the previous years. With 
+            a very different competition than the previous years. With 
             the big change of the whole champions league format, there have
             been CRAZY games. Arsenal with a DEVESTATING home win against the 
             holding champions. A crushing 3-0 win with 2 absolute screamers
             from none other than Declan Rice. Not the first, but also his second ever 
             direct freekick of his football career. We are patiently waiting
             to see what is going to happen in Santiago Bernabeu!
-            </p>
+        </p>
     </article>
-</div>
-</div>
+    </section>
+</section>
 </main>
 
     <footer class="footer-container">
         <!--Footer for the welcome page-->
-        <div class="footer-content">
-            <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
-            <p>Contact me: engjikrass@hotmail.com</p>
-        </div>
+        <p>&copy; 2025 FUT FRENZY. All rights reserved. Pictures from Google Pictures</p>
+        <p>Contact me: engjikrass@hotmail.com</p>
     </footer>
 </body>
 </html>
